Changed scrollbar and fixed footer padding on mobile

--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -145,7 +145,7 @@
         align-items: center;
         justify-self: center;
         align-items: center;
-        background: #FB8B24;
+        background: #197278;
         border-radius: 20px;
         cursor: pointer;
     }
